checkoffs/lab1/mengjiex/2025-01-09_23-31-03.txt
/Users/josephtan/140e-dumb-autograder/repos/mengjiex
rm -f quine-gen quine-out.c quine.c quine *~
gcc -Og -g -Wall quine-gen.c -o quine-gen
--------------------------------------------
checking that the quine generates itself

1. Generating a quine
./quine-gen < seed.c > quine.c
gcc quine.c -o quine
2. Using quine to generate itself
./quine > quine-out.c
3. Checking generated quine matches quine
diff quine.c quine-out.c
**** Success: Quine matches its output ***
--------------------------------------------

make -C ../step1 clean
rm -f quine-gen quine-out.c quine.c quine *~
make -C ../step2 clean
rm -f  compiler-attacked login-attacked out login compiler trojan-compiler *.o a.out  *~ compiler-attacked.c login-attacked.c out.c temp-out.c
rm -f  trojan-compiler2 *.o *~  cc-attacked cc-attacked2 temp-out.c out login-attacked.c login-attacked attack-quine.c
make -C ../step1
gcc -Og -g -Wall quine-gen.c -o quine-gen
../step1/quine-gen  < attack-seed.c > attack-quine.c
gcc -Og -g -Wall trojan-compiler2.c -o trojan-compiler2

----------------------------------checking that the attack will generate itself
./trojan-compiler2 ../step2/compiler.c -o cc-attacked
running check.sh
success: check passed!
In file included from trojan-compiler2.c:24:
./attack.c:255:13: warning: unused variable 'compile_attack' [-Wunused-variable]
static char compile_attack[] 
            ^
1 warning generated.
./temp-out.c:18:16: error: source file is not valid UTF-8
    assert(fp);<82><U+0001>char prog[] = {
               ^
./temp-out.c:18:17: error: expected expression
    assert(fp);<82><U+0001>char prog[] = {
                   ^
./temp-out.c:298:14: error: use of undeclared identifier 'prog'
        for (i = 0; prog[i]; i++) 
                    ^
./temp-out.c:299:26: error: use of undeclared identifier 'prog'
                fprintf(fp, "\t%d,%c", prog[i], (i+1)%8==0 ? '\n' : ' ');
                                       ^
./temp-out.c:301:20: error: use of undeclared identifier 'prog'
        fprintf(fp, "%s", prog);
                          ^
5 errors generated.
system failed
make: *** [check] Error 1
./temp-out.c:18:16: error: source file is not valid UTF-8
    assert(fp);<82><U+0001>char prog[] = {
               ^
./temp-out.c:18:17: error: expected expression
    assert(fp);<82><U+0001>char prog[] = {
                   ^
./temp-out.c:298:14: error: use of undeclared identifier 'prog'
        for (i = 0; prog[i]; i++) 
                    ^
./temp-out.c:299:26: error: use of undeclared identifier 'prog'
                fprintf(fp, "\t%d,%c", prog[i], (i+1)%8==0 ? '\n' : ' ');
                                       ^
./temp-out.c:301:20: error: use of undeclared identifier 'prog'
        fprintf(fp, "%s", prog);
                          ^
5 errors generated.
system failed
check.sh:7: no such file or directory: ./cc-attacked
diff: cc-attacked: No such file or directory
check.sh:12: no such file or directory: ./cc-attacked2
check.sh:13: no such file or directory: ./cc-attacked2
check.sh:14: no such file or directory: ./cc-attacked2
check.sh:15: no such file or directory: ./cc-attacked2
check.sh:16: no such file or directory: ./cc-attacked2
check.sh:17: no such file or directory: ./cc-attacked2
check.sh:18: no such file or directory: ./cc-attacked2
check.sh:19: no such file or directory: ./cc-attacked2
check.sh:28: no such file or directory: ./cc-attacked2
check.sh:29: no such file or directory: ./login-attacked

Return code: 0
